--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
 
 </head>
 <body>
+<div class="wrapper">
+
 <div class="alert-wrapper" data-bind="foreach: alertsArr">
 	<div class="alert alert-danger alert-dismissible" role="alert">
 
@@ -19,8 +21,26 @@
 	</div>
 </div>
 
-<div class="wrapper">
-	<nav class="navbar navbar-default">
+
+<nav class="navbar navbar-default">
+	<div class="container">
+		<div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+      </button>
+      <span class="navbar-brand">Neighborhood Map</span>
+    </div>
+
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			asdasdasd
+		</div>
+	</div>
+</nav>
+
+	<!-- <nav class="navbar navbar-default">
   <div class="container-fluid">
 		<div class="container">
 			<a class="navbar-brand navbar-right" href="#" >
@@ -34,23 +54,27 @@
 			</form>
 		</div>
 	</div>
-	</nav>
+	</nav> -->
 
-<div class="container list-container">
+<div class="container list-container hidden-xs">
 	<div class="row">
 		<div class="col-xs-12">
 			<ul id="cat-list" data-bind="foreach: poiFilterred">
 	        <li>
 						<a data-bind="text: name, click: $parent.itemClick, css:{current: $parent.isCurrentItem($data) }" href="javascript:void(0)"></a>
 					</li>
-	    </ul>			
+	    </ul>
 		</div>
 	</div>
 </div>
 
+
+
 <div class="map-container">
 		<div id="map" class="col-xs-12">
 </div>
+
+
 </div>
 
 <script src="./js/bundle.js"></script>
