--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,11 @@
 <nav class="navbar navbar-default">
 	<div class="container">
 		<div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed"
+				data-toggle="collapse"
+				data-target="#bs-navbar-collapse"
+				aria-expanded="false">
+				
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -34,36 +38,31 @@
       <span class="navbar-brand">Neighborhood Map</span>
     </div>
 
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			asdasdasd
+		<div class="collapse navbar-collapse" id="bs-navbar-collapse">
+			<div class="visible-xs-block collapse-container">
+				<form class="form-group">
+					<input type="text"
+						class="form-control"
+						placeholder="Point of Interest"
+						data-bind="textInput: textFilter" />
+				</form>
+				<ul id="cat-list" data-bind="template: { name:'poi-items', foreach: poiFilterred}">
+			</div>
 		</div>
 	</div>
 </nav>
 
-	<!-- <nav class="navbar navbar-default">
-  <div class="container-fluid">
-		<div class="container">
-			<a class="navbar-brand navbar-right" href="#" >
-				Neighborhood Map
-			</a>
-			<form class="navbar-form form-group navbar-left">
+<div class="container list-container hidden-xs">
+	<div class="row">
+		<div class="col-xs-12">
+			<form class="form-group">
 				<input type="text"
 					class="form-control"
 					placeholder="Point of Interest"
 					data-bind="textInput: textFilter" />
 			</form>
-		</div>
-	</div>
-	</nav> -->
-
-<div class="container list-container hidden-xs">
-	<div class="row">
-		<div class="col-xs-12">
-			<ul id="cat-list" data-bind="foreach: poiFilterred">
-	        <li>
-						<a data-bind="text: name, click: $parent.itemClick, css:{current: $parent.isCurrentItem($data) }" href="javascript:void(0)"></a>
-					</li>
-	    </ul>
+			<ul id="cat-list" data-bind="template: { name:'poi-items', foreach: poiFilterred}">
+			</ul>
 		</div>
 	</div>
 </div>
@@ -74,9 +73,14 @@
 		<div id="map" class="col-xs-12">
 </div>
 
+</div><!-- EO Wrapper -->
 
-</div>
-
+<script type="text/html" id="poi-items">
+	<li>
+		<a data-bind="text: name, click: $parent.itemClick, css:{current: $parent.isCurrentItem($data) }" href="javascript:void(0)"></a>
+	</li>
+</script>
 <script src="./js/bundle.js"></script>
+
 </body>
 </html>
